# cafe-common

./: .build.yml  .travis.yml  AUTHORS  COPYING  NEWS  README  autogen.sh  configure.ac  output_463be40c36f6e148a75f41ab9ad853b58605ee31  output_5b28ab22ff5cc12579e288e50e65d73662094eca  output_80b9c4f2b060ae95813e655f50fe358c7bed6a0e  output_ac222b4ae1e2b61569c72f5ea030e2c499435229
.github/workflows/: main.yml
doc/: Makefile.am  autogen.sh.example  cafe-autogen.1  cafe-autogen.txt  cafe-doc-common.1  cafe-doc-common.txt  mate-autogen.1  mate-autogen.txt  mate-doc-common.1  mate-doc-common.txt  update-manpages.sh  usage.txt
doc-build/: Makefile.am  mate-doc-common.in  xmldocs.make
macros/: Makefile.am  cafe-autogen  cafe-common.m4  cafe-compiler-flags.m4  mate-autogen  mate-code-coverage.m4  mate-common.m4
